There are all kind of problems in this code... :( The transitions are completely wrong with the glassboxes, but my head hurts too much to fix this now...

--- a/less/images.less
+++ b/less/images.less
@@ -48,14 +48,9 @@ img {
     border-radius: @well-round-edge;
     
     .glassbox-slide {
-        opacity: 0; 
         position: absolute;
         top: 0; 
         left: 0;
-    }
-    
-    .glassbox-present {
-        opacity: 1;
     }
     
     .glassbox-left-arrow, .glassbox-right-arrow, .glassbox-caption {
